tests/errors/blank_line_before_statement.php
<?php

declare(strict_types=1);

function hello(): int
{
    $a = 12;
    return $a;
}
